@startuml
skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam roundcorner 12
skinparam defaultFontName Arial
skinparam ArrowColor #344054
skinparam rectangle {
  BorderColor #344054
  FontColor #101828
}
skinparam package {
  BorderColor #667085
  FontColor #101828
  BackgroundColor #F9FAFB
}
skinparam class {
  BorderColor #344054
  FontColor #101828
  BackgroundColor #F9FAFB
}
title Class structure - Issue an invite
class InviteCode {
  +Guid Id
  +Guid CongregationId
  +string Code
  +DateTimeOffset ExpiresAt
  +DateTimeOffset? RedeemedAt
  +IsRedeemable(asOf: DateTimeOffset): bool
}
class InviteCodeOptions <<planned>> {
  +string Alphabet
  +int Length
  +TimeSpan Lifetime
}
class IssueInviteCodeCommandHandler <<planned>> {
  +Handle(command: IssueInviteCodeCommand): Task<IssuedInviteDto>
}
class RevokeInviteCodeCommand <<planned>> {
  +Guid InviteId
}
IssueInviteCodeCommandHandler ..> InviteCodeOptions : configured policy
IssueInviteCodeCommandHandler ..> InviteCode : creates; target hashes code
RevokeInviteCodeCommand ..> InviteCode : marks revoked (planned)
@enduml
